FIX: bug in padding-top puts "password" too low
Closes #150

--- a/less/custom.less
+++ b/less/custom.less
@@ -93,6 +93,10 @@
 	#form-login-submit {
 		margin-right: 5px;
 	}
+	// FIX: Password placeholder is taken down on Safari
+	#modlgn-passwd {
+		padding-top: 1px;
+	}
 }
 
 // Media Manager
